# causal-triangulations

./: .bencher.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  REFERENCES.md  cliff.toml  clippy.toml  justfile  pyproject.toml  ty.toml
.github/workflows/: audit.yml  ci.yml  codecov.yml  performance.yml  rust-clippy.yml
benches/: cdt_benchmarks.rs
docs/: RELEASING.md  TODO.md  foliation.md  project.md  testing.md
docs/dev/: commands.md  rust.md  testing.md
examples/: basic_cdt.rs  find_good_seeds.rs
scripts/: changelog_utils.py  hardware_utils.py  run_all_examples.sh
scripts/tests/: __init__.py  test_benchmark_models.py  test_changelog_generate_workflow.py  test_changelog_tag_size_limit.py  test_release_notes_postprocessor.py  test_subprocess_utils.py
src/: config.rs  errors.rs  lib.rs  main.rs  util.rs
src/cdt/: action.rs  foliation.rs  metropolis.rs  triangulation.rs
src/geometry/: generators.rs  operations.rs  traits.rs
src/geometry/backends/: delaunay.rs  mock.rs
tests/: cli.rs  integration_tests.rs  proptest_foliation.rs  proptest_metropolis.rs
