[package]
name = "causal-triangulations"
version = "0.0.1"
authors = [ "Adam Getchell <adam@adamgetchell.org>" ]
categories = [ "science", "mathematics", "algorithms", "simulation" ]
edition = "2024"
homepage = "https://github.com/acgetchell/causal-triangulations"
keywords = [
    "quantum-gravity",
    "spacetime",
    "simulation",
    "triangulation",
    "causal",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/acgetchell/causal-triangulations"
rust-version = "1.94.0"
description = "Causal Dynamical Triangulations in d-dimensions"

# Features removed - backend system is now internal implementation detail
# Both delaunay and mock backends are always compiled

[[bin]]
name = "cdt"
path = "src/main.rs"

[[bench]]
name = "cdt_benchmarks"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.0", features = [ "derive" ] }
delaunay = "0.7.3"
markov-chain-monte-carlo = "0.1.0"
dirs = "6.0.0"
env_logger = "0.11.10"
float-ord = "0.3.2"
log = "0.4.29"
num-traits = "0.2.19"
rand = "0.10.0"
serde = { version = "1.0.228", features = [ "derive" ] }
thiserror = "2.0.17"

[dev-dependencies]
approx = "0.5.1"
slotmap = "1.1.1"
assert_cmd = "2.2.0"
criterion = { version = "0.8.2", features = [ "html_reports" ] }
predicates = "3.1.4"
proptest = "1.11.0"

[lints.rust]
unexpected_cfgs = "warn"
unsafe_code = "forbid"
dead_code = "warn"
missing_docs = "warn"

[lints.clippy]
extra_unused_type_parameters = "warn"
pedantic = { level = "warn", priority = -1 }
# Allow multiple crate versions due to transitive dependencies
multiple_crate_versions = "allow"
