[build-system]
requires = [ "setuptools>=65.0.0", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "causal-triangulations-scripts"
version = "0.1.0"
description = "Python utility scripts for the causal-triangulations Rust library"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [ { name = "Adam Getchell", email = "adam@adamgetchell.org" } ]
keywords = [ "cdt", "triangulation", "benchmarking", "utilities" ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Benchmarking",
]

# Project dependencies
dependencies = [ "packaging" ]

[project.urls]
"Homepage" = "https://github.com/acgetchell/causal-triangulations"
"Repository" = "https://github.com/acgetchell/causal-triangulations"

# Configure scripts as entry points for command-line usage
[project.scripts]
benchmark-utils = "benchmark_utils:main"
changelog-utils = "changelog_utils:main"
enhance-commits = "enhance_commits:main"
hardware-utils = "hardware_utils:main"
performance-analysis = "performance_analysis:main"
coverage-report = "coverage_report:main"
# Backwards-compatible alias
coverage_report = "coverage_report:main"

# Configure setuptools to find modules in scripts/ directory
[tool.setuptools]
package-dir = { "" = "scripts" }
py-modules = [
    "benchmark_models",
    "benchmark_utils",
    "changelog_utils",
    "coverage_report",
    "enhance_commits",
    "hardware_utils",
    "performance_analysis",
    "subprocess_utils",
]

[tool.ruff]
line-length = 150
target-version = "py311"
src = [ "scripts" ]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "NPY",
    "RUF",
]
fixable = [ "ALL" ]
unfixable = [  ]
ignore = [
    # Formatter conflicts
    "COM812",
    "ISC001",

    # CLI script patterns
    "PLR2004",
    "FBT001",
    "FBT002",
    "BLE001",
    "T201",
    "TRY300",
    "TRY301",
    "ARG001",
    "ERA001",
    "EXE001",
    "PTH123",
    "N806",
    "EM102",
    "TRY003",
    "PLW2901",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/test_*.py" = [ "S101", "SLF001" ]

[tool.ruff.lint.isort]
known-first-party = [
    "benchmark_models",
    "benchmark_utils",
    "changelog_utils",
    "coverage_report",
    "enhance_commits",
    "hardware_utils",
    "performance_analysis",
    "subprocess_utils",
]
force-single-line = false
split-on-trailing-comma = true
combine-as-imports = true
order-by-type = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [ "-ra", "--strict-markers", "--strict-config", "--color=yes" ]
testpaths = [ "scripts/tests" ]
python_files = [ "test_*.py", "*_test.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]

[dependency-groups]
dev = [ "pytest>=8.0.0", "ruff>=0.12.11", "ty>=0.0.8" ]
